--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "rust_utilities"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 tap = "1.0.1"
+tokio = { version = "1.29.1", default-features=false,  optional = true }
+
+[features]
+default = ["time_async"]
+async = []
+time_async = ["tokio/time","async"]
