--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rust_utilities"
 version = "0.4.0"
 edition = "2021"
+repository="https://github.com/ta3pks/rust_utilities"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
