--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust_utilities"
+name = "rust_helpers"
 version = "0.4.0"
 edition = "2021"
 repository="https://github.com/ta3pks/rust_utilities"
