--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_helpers"
-version = "2.5.0"
+version = "2.6.0"
 edition = "2021"
 repository = "https://github.com/ta3pks/rust_utilities"
 description = "Rust utilities to help with projects"
@@ -30,3 +30,6 @@ json = ["serde", "serde_json"]
 async = []
 time_async = ["tokio/time", "async"]
 rayon = ["dep:rayon"]
+
+[dev-dependencies]
+serde = { version = "1.0.195", features = ["derive"] }
